--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
-
-
+body {
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+}
 
 /* body {
     background: #667db6;
@@ -18,201 +19,249 @@
       #667db6
     ); 
   } */
-  
-  /* header {
+
+/* header {
     position: sticky;
     top: 0;
     z-index: 100;
     
     
   } */
-  
-  /*barra de navegacion*/
-  nav {
-    display: flex;
-    position:sticky;
-    top:0;
-    z-index: 100;
-    margin-top: 1rem;
-    width: 100%;
-    height: 7.813rem;
-    justify-content: space-around;
-    align-items: center;
-    padding: 0 20px;
-    background: #0f0c29;
-    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
-    background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-    font-size: 1.2rem;
-    color: aqua;
-    box-shadow: 0.625rem 0.313rem 0.313rem black;
-    }
 
-  /*lista del menú de navegacion*/
- 
-  ul {
-    display: flex;
-    margin: 0rem;
-    padding: 6.25rem;
-   
-  }
+/*barra de navegacion*/
+nav {
+  display: flex;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  margin-top: 1rem;
+  width: 100%;
+  height: 7.813rem;
+  justify-content: space-around;
+  align-items: center;
+  padding: 0 20px;
+  background: #0f0c29;
+  background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+  font-size: 1.2rem;
+  color: aqua;
+  box-shadow: 0.625rem 0.313rem 0.313rem black;
+}
+
+/*lista del menú de navegacion*/
+
+ul {
+  display: flex;
+  margin: 0rem;
+  padding: 6.25rem;
+}
+
+ul li {
+  list-style: none;
+  margin: 0 1.563rem;
+}
+
+ul li a {
+  color: aqua;
+  text-decoration: none;
+}
+
+ul li a:hover {
+  color: white;
+}
+
+/*logo Codo-Net*/
+.logo {
+  margin-left: -8rem;
+  width: 20rem;
+  cursor: pointer;
+  transition: 1s; /*esto junto con la clase de abajo hace que el logo cambie de tamaño*/
+}
+
+/*Esto hace que el logo cambie de tamaño al pasar el mouse*/
+.logo:hover {
+  transform: scale(1.1);
+  transition: 1s;
+}
+
+/*contenido principal de la página*/
+.grid-container {
+  display: grid;
+  grid-template: 4.25rem 20rem / 1fr 1fr 1fr;
+  grid-template-areas:
+    "above above above"
+    "left center right";
+
+  gap: 10px;
+}
+.grid-item{
+  display: flex;
+  justify-content: center;
+  margin-top: 0.5rem;
   
-  ul li {
-    list-style: none;
-    margin: 0 1.563rem;
-  }
   
-  ul li a {
-    color: aqua;
-    text-decoration: none;
-  }
+}
+
+.above {
+  grid-area: above;
+  background:white;
+  text-align: center;
   
-  ul li a:hover {
-    color: white;
+}
+
+.left {
+  grid-area: left;
+  background: white;
+  text-align: center;
+  
   }
 
+.center {
+  grid-area: center;
+  background: white;
+  text-align: center;
   
-  
-  /*logo Codo-Net*/
-  .logo {
-    margin-left: -8rem;
-    width:20rem;
-    cursor: pointer;
-    transition: 1s;/*esto junto con la clase de abajo hace que el logo cambie de tamaño*/
-  }
+}
 
-  /*Esto hace que el logo cambie de tamaño al pasar el mouse*/
-  .logo:hover {
-    transform: scale(1.1);
-    transition: 1s;
-  }
+.right {
+  grid-area: right;
+  background: white;
+  text-align: center;
+}
 
-  /*contenido principal de la página*/
-  .principal {
-    margin-top: 5rem;
-  }
+
   
- 
+
+
+
+
+  
 
 
 /*contenedor del footer*/
-  .footContainer {
-    background: #141e30;
-    background: -webkit-linear-gradient(to right, #243b55, #141e30);
-    background: linear-gradient(to right, #243b55, #141e30);
-    display: grid;
-    grid-template-columns: 13.125rem 1fr 1fr 13.75rem 2fr;
-    justify-content: start;
-    gap: 6.25rem;
-    color: white;
-    
-  }
-  
-  /*Estilos del footer*/
-  footer {
-    background: #141e30;
-    background: -webkit-linear-gradient(to right, #243b55e9, #141e30);
-    background: linear-gradient(to right, #243b55ea, #141e30);
-    color:white;
-  }
-  
-  /*logo en el footer*/
-  .footerLogo {
-    margin-top: -1.8rem;
-    margin-left: -5.5rem;
-  }
-  /*Margen izquierdo para la primera columna del footer*/
-  .column1 {
-    margin-left:1rem;
-  }
-  /*Margen derecho para la última columna del footer*/
-  .column5 {
-    margin-right:1.5rem;
-  }
-  
-  /*final del footer*/
-  .copyright {
-    display: flex;
-    justify-content: center;
-  }
-  
-  /*íconos de las redes sociales en el footer*/
-  .fa-brands {
-    margin-top: 1rem;
-    padding: 0.313rem;
-  }
-  .fa-brands.fa-instagram.fa-2xl:hover {
-    color: #E1306C;
-  }
-  .fa-brands.fa-facebook.fa-2xl:hover {
-    color: #3b5998;
-  }
-  .fa-brands.fa-whatsapp.fa-2xl:hover {
-    color: #00bb2d;
-  }
-  .fa-brands.fa-twitter.fa-2xl:hover {
-    color: #00acee;
-  }
+.footContainer {
+  background: #141e30;
+  background: -webkit-linear-gradient(to right, #243b55, #141e30);
+  background: linear-gradient(to right, #243b55, #141e30);
+  display: grid;
+  grid-template-columns: 13.125rem 1fr 1fr 13.75rem 2fr;
+  justify-content: start;
+  gap: 6.25rem;
+  color: white;
+}
 
-  /*opciones de descarga de app en footer*/
-  .app {
-    margin-top:4rem;
-  }
-  
- 
+/*Estilos del footer*/
+footer {
+  background: #141e30;
+  background: -webkit-linear-gradient(to right, #243b55e9, #141e30);
+  background: linear-gradient(to right, #243b55ea, #141e30);
+  color: white;
+}
+
+/*logo en el footer*/
+.footerLogo {
+  margin-top: -1.8rem;
+  margin-left: -5.5rem;
+}
+/*Margen izquierdo para la primera columna del footer*/
+.column1 {
+  margin-left: 1rem;
+}
+/*Margen derecho para la última columna del footer*/
+.column5 {
+  margin-right: 1.5rem;
+}
+
+/*final del footer*/
+.copyright {
+  display: flex;
+  justify-content: center;
+}
+
+/*íconos de las redes sociales en el footer*/
+.fa-brands {
+  margin-top: 1rem;
+  padding: 0.313rem;
+}
+.fa-brands.fa-instagram.fa-2xl:hover {
+  color: #e1306c;
+}
+.fa-brands.fa-facebook.fa-2xl:hover {
+  color: #3b5998;
+}
+.fa-brands.fa-whatsapp.fa-2xl:hover {
+  color: #00bb2d;
+}
+.fa-brands.fa-twitter.fa-2xl:hover {
+  color: #00acee;
+}
+
+/*opciones de descarga de app en footer*/
+.app {
+  margin-top: 4rem;
+}
 
 /*ultimo carrusel sin bootstrap que funciona y es automático*/
 .slider-frame {
-	width: 100%;
+  width: 100%;
   height: auto;
-	margin:30px auto 0;
+  margin: 30px auto 0;
   overflow: hidden;
-  }
+}
 
 .slider-frame ul {
-	display: flex;
-	padding: 0;
-	width: 400%;
-	animation: slide 15s infinite alternate ease-in-out;
+  display: flex;
+  padding: 0;
+  width: 400%;
+  animation: slide 15s infinite alternate ease-in-out;
 }
 
 .slider-frame li {
-	width: 100%;
-	list-style: none;
-  }
+  width: 100%;
+  list-style: none;
+}
 
 .slider-frame img {
-	width: 100%;
+  width: 100%;
   border-radius: 10px;
-  box-shadow: 0.313rem 0.313rem 0.313rem  #ffffffcc;
-  }
-  /*Un @keyframe es una regla en CSS que define los estilos específico
+  box-shadow: 0.313rem 0.313rem 0.313rem #ffffffcc;
+}
+/*Un @keyframe es una regla en CSS que define los estilos específicos
   de un elemento en diferentes momentos de una animación.
   En una animación CSS, se especifican una serie de fotogramas clave (keyframes)
   que describen cómo debe cambiar el aspecto del elemento 
   en diferentes momentos de la animación. */
 @keyframes slide {
-	0% {margin-left: 0;}
-	20% {margin-left: 0;}
-	
-	25% {margin-left: -100%;}
-	45% {margin-left: -100%;}
-	
-	50% {margin-left: -200%;}
-	70% {margin-left: -200%;}
-	
-	75% {margin-left: -300%;}
-	100% {margin-left: -300%;}
-  
+  0% {
+    margin-left: 0;
+  }
+  20% {
+    margin-left: 0;
+  }
+
+  25% {
+    margin-left: -100%;
+  }
+  45% {
+    margin-left: -100%;
+  }
+
+  50% {
+    margin-left: -200%;
+  }
+  70% {
+    margin-left: -200%;
+  }
+
+  75% {
+    margin-left: -300%;
+  }
+  100% {
+    margin-left: -300%;
+  }
 }
-.downloadApp{
+.downloadApp {
   width: 1708px;
   height: 562px;
   background-color: #0082c8;
-
 }
-
-
-
-
-
-  
