--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,7 @@ body {
   background-image: linear-gradient(to right, #434343 0%, black 100%);
 }
 
+/*Esto está comentado porque era el fondo anterior, ahora esta con background de prueba oscuro*/
 /* body {
     background: #667db6;
     background: -webkit-linear-gradient(
@@ -20,13 +21,7 @@ body {
     ); 
   } */
 
-/* header {
-    position: sticky;
-    top: 0;
-    z-index: 100;
-    
-    
-  } */
+
 
 /*barra de navegacion*/
 nav {
@@ -74,60 +69,116 @@ ul li a:hover {
 .logo {
   margin-left: -8rem;
   width: 20rem;
-  cursor: pointer;
-  transition: 1s; /*esto junto con la clase de abajo hace que el logo cambie de tamaño*/
 }
 
-/*Esto hace que el logo cambie de tamaño al pasar el mouse*/
-.logo:hover {
-  transform: scale(1.1);
-  transition: 1s;
-}
-
-/*contenido principal de la página*/
+/*contenido de la página en donde estan las ilustraciones*/
 .grid-container {
   display: grid;
   grid-template: 4.25rem 20rem / 1fr 1fr 1fr;
   grid-template-areas:
     "above above above"
     "left center right";
-
-  gap: 10px;
-}
+ gap: 25px;
+ margin:10px;
+  
+} 
 .grid-item{
   display: flex;
   justify-content: center;
   margin-top: 0.5rem;
-  
-  
 }
 
 .above {
   grid-area: above;
-  background:white;
+  background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
   text-align: center;
-  
+  color:white;
+  text-shadow:black 0.1em 0.1em 0.1em;
+  box-shadow: 0.625rem 0.313rem 0.313rem black;
 }
-
-.left {
-  grid-area: left;
-  background: white;
-  text-align: center;
   
+.left {/*estilos de la ilustracion de la izquierda*/
+  grid-area: left;
+  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(234,249,249,0.67) 0.1%, rgba(239,249,251,0.63) 90.1% );
+  text-align: center;
+  text-shadow:whitesmoke 0.1em 0.1em 0.1em;
+  box-shadow: 0.425rem 0.213rem 0.213rem rgba(255, 255, 255, 0.378);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
   }
 
-.center {
+  .left:hover{/*con el hover cambia de color la imagen al pasar con el mouse*/
+    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
+    transform: scale(1.1);
+    transition: 1s;
+  }
+   
+  .center {/*estilos de la ilustracion del centro*/
   grid-area: center;
-  background: white;
+  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(234,249,249,0.67) 0.1%, rgba(239,249,251,0.63) 90.1% );
   text-align: center;
-  
+  text-shadow:whitesmoke 0.1em 0.1em 0.1em;
+  box-shadow: 0.425rem 0.213rem 0.213rem rgba(255, 255, 255, 0.378);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
+  }
+
+ .center:hover{
+  background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
+    transform: scale(1.1);
+    transition: 1s;
 }
 
-.right {
+.right {/*estilos de la ilustracion de la derecha*/
   grid-area: right;
-  background: white;
+  background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(234,249,249,0.67) 0.1%, rgba(239,249,251,0.63) 90.1% );
   text-align: center;
+  text-shadow:whitesmoke 0.1em 0.1em 0.1em;
+  box-shadow: 0.425rem 0.213rem 0.213rem rgba(255, 255, 255, 0.378);
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 1s; /*esto junto con la clase de abajo hace la imagen cambie de tamaño*/
+} 
+
+.right:hover{
+  background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
+  transform: scale(1.1);
+  transition: 1s;
 }
+
+/* Este el es grid debajo de las ilustraciones , en donde está el aviso */
+/*en donde está el aviso del 5G*/
+.grid-advert{
+  display:grid;
+  margin:auto auto 10px auto;
+  align-items: center;
+  text-align: center;
+  grid-template-columns: 1fr 1fr auto;
+  width:980px;
+  height: 400px;
+   background-image: linear-gradient( 65.9deg,  rgba(85,228,224,1) 5.5%, rgba(75,68,224,0.74) 54.2%, rgba(64,198,238,1) 55.2%, rgba(177,36,224,1) 98.4% );
+   color:white;
+  border-radius: 20px;
+  font-family: 'Gugi', cursive;
+  font-family: 'Lilita One', cursive;
+} 
+
+/*Acá estan simplemente los tamaños y la alineacion de la fuente del anuncio*/
+.grid-advert h1{
+  font-size: 8rem;
+  text-align: start;
+}
+.grid-advert h2{
+  font-size: 3rem;
+}
+
+  
+
+
+
+
 
 
   
