--- a/assets/css/styles_form2.css
+++ b/assets/css/styles_form2.css
@@ -1,13 +1,19 @@
-body{
+/* body{
     background: #667db6; 
     background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); 
     background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6); 
-} 
+}  */
+
+body{
+    background-image: linear-gradient(to right, #434343 0%, black 100%);
+    }
+
 .containerNav{
     width: 100%;
     display: flex;
     align-content:space-between;
     color:aqua;
+    
     }
 
 /* Contenedor grid */
@@ -43,14 +49,16 @@ font-size: 1.3rem;
 box-shadow: 0.625rem 0.313rem 0.313rem black; 
 }
 /*barra lateral izquierda*/
-.left{ grid-area:left;  background: #2193b0; 
+  .left{ grid-area:left;  /*background: #2193b0; 
     background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-    background: linear-gradient(to right, #6dd5ed, #2193b0); 
+    background: linear-gradient(to right, #6dd5ed, #2193b0); */   
+    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
     }
     /*barra lateral derecha*/
-.right{ grid-area:right; background: #2193b0;  
+.right{ grid-area:right; /*background: #2193b0;  
     background: -webkit-linear-gradient(to right, #6dd5ed, #2193b0); 
-    background: linear-gradient(to right, #6dd5ed, #2193b0); 
+    background: linear-gradient(to right, #6dd5ed, #2193b0); */
+    background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
      }
 /*pie de la página*/
 .bottom{ grid-area: bottom;
@@ -89,13 +97,11 @@ ul li a:hover{
 .logo{
     margin-top:-1.5rem;
     margin-left:-40rem;
-    cursor: pointer;
-    transition:1s;
-}
+    }
 
-.logo:hover{
-    transform: scale(1.1);
-    transition: 1s;
+
+.middle{
+    color:#D3D0CB;
 }
 
 /* Estilo del formulario*/
@@ -108,6 +114,9 @@ form{
     background: linear-gradient(to right, #283E51, #4B79A1); 
     margin-top: 3rem;
     }
+    
+        
+    
     
 
 
