--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -26,6 +26,7 @@ nav {
   display: flex;
   position: sticky;
   top: 0;
+  left:0;
   z-index: 100;
   margin-top: 1rem;
   width: 100%;
@@ -42,6 +43,8 @@ nav {
   color: aqua;
   box-shadow: 0.625rem 0.313rem 0.313rem #000000;
 }
+
+
 
 /*lista del menú de navegacion*/
 ul {
@@ -69,6 +72,7 @@ ul li a:hover {
   margin-left: -8rem;
   width: 20rem;
 }
+
 
 /*ultimo carrusel sin bootstrap que funciona y es automático*/
 .slider-frame {
@@ -130,6 +134,8 @@ ul li a:hover {
     margin-left: -300%;
   }
 }
+
+
 /*banner final del carrusel. Ideal ajustar las imagenes a 1708px x 562px
  o el equivalente en rem*/
 .downloadApp {
@@ -158,13 +164,19 @@ ul li a:hover {
 /* Este es el cartelito que dice "conocé nuestras opciones"*/
 .above {
   grid-area: above;
-  background-image: linear-gradient( 76.3deg,  rgba(44,62,78,1) 12.6%, rgba(69,103,131,1) 82.8% );
+  background-image: linear-gradient( 76.3deg,  #2c3e4e 12.6%, #456783 82.8% );
   text-align: center;
-  color:rgba(255, 255, 255, 0.987);
-  text-shadow:black 0.1em 0.1em 0.1em;
-  box-shadow: 0.625rem 0.313rem 0.313rem black;
+  color:#fffffffc;
+  text-shadow:#000000 0.1em 0.1em 0.1em;
+  box-shadow: 0.625rem 0.313rem 0.313rem #000000;
   opacity: .6;
-}
+  }
+  .above h2{
+    font-size: 2.5rem;
+  }
+
+
+  
   
 .left {/*estilos de la ilustracion de la izquierda*/
   grid-area: left;
@@ -231,8 +243,7 @@ ul li a:hover {
   color:white;
   -webkit-text-stroke: 2px black;/*le agrega un borde al texto*/
   border-radius: 20px;
-  
-  font-family: 'Lilita One', cursive;
+ font-family: 'Lilita One', cursive;
   opacity: .8;
 } 
 
@@ -244,6 +255,11 @@ ul li a:hover {
 .grid-advert h2{
   font-size: 3rem;
 }
+.wifi-icon{
+  rotate: 90deg;
+}
+
+
 
 /*cartelito de descarga de la app*/
 .grid-app{
@@ -253,21 +269,44 @@ ul li a:hover {
   background-color: #00DBDE;
   background-image: linear-gradient(90deg, #00DBDE 0%, #FC00FF 100%);
  color:white;
+ -webkit-text-stroke: 1px black;/*le agrega un borde al texto*/
  align-items: center;
 text-align: center;
 grid-template-columns: 1fr auto auto;
 width:90%;
 height: 250px;
 border-radius: 20px;
+font-family: 'Lilita One', cursive;
 opacity:.8;
 }
 .grid-app img{
   border-radius: 30px;
   }
-.grid-app h1, h2 {
-    font-family: 'Lilita One', cursive;
-    -webkit-text-stroke: 1px black;/*le agrega un borde al texto*/
+
+  .grid-sim{
+    display: grid;
+    margin:20px auto 20px auto;
+    background-image: url(../img/fondo-papel-tapiz-colorido-borroso-vivo.jpg);
+   color:#ffffff;
+   -webkit-text-stroke: 1px black;/*le agrega un borde al texto*/
+   align-items: center;
+  text-align: center;
+  grid-template-columns: 1fr auto auto;
+  width:90%;
+  height: 250px;
+  border-radius: 20px;
+  font-family: 'Lilita One', cursive;
+  opacity:.8;
   }
+  .grid-sim img{
+    border-radius: 30px;
+    }
+    
+      
+      
+    
+
+
 
 
   /*contenedor del footer*/
@@ -280,6 +319,7 @@ opacity:.8;
   justify-content: start;
   gap: 6.25rem;
   color: white;
+  width: 100%
 }
 
 /*Estilos del footer*/
@@ -296,11 +336,11 @@ footer {
   margin-left: -5.5rem;
 }
 /*Margen izquierdo para la primera columna del footer*/
-.column1 {
+.col1 {
   margin-left: 1rem;
 }
 /*Margen derecho para la última columna del footer*/
-.column5 {
+.col5 {
   margin-right: 1.5rem;
 }
 
@@ -340,5 +380,134 @@ footer {
 /*opciones de descarga de app en footer*/
 .app {
   margin-top: 4rem;
+}
+
+/*Ajuste de los media queries*/
+/*Estilos para pantallas pequeñas*/ 
+
+@media only screen and (max-width: 600px) {
+  
+  nav{
+    flex-direction: column;
+    justify-content: center;
+    height: auto;
+    padding: 1rem;
+  }
+  ul {
+    padding: 0;
+    margin: 1rem 0;
+    flex-direction: column;
+  }
+  ul li {
+    margin: 1rem 0;
+    text-align: center;
+  }
+  .logo {
+    margin-left: 0;
+    margin-bottom: 1rem;
+  }
+  
+  .footContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding: 30px 10px;
+  }
+  
+  .col1 {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .col1 img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  .col2,.col3,.col4,.col5 {
+    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  
+  .col5 .app {
+    margin-top: 20px;
+  }
+  
+  .col5 .qrCode {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .line {
+    margin: 30px 0;
+  }
+  
+  .copyright {
+    text-align: center;
+  }
+}
+  
+ 
+
+
+@media only screen and (min-width: 600) {
+  /* estilos para pantallas medianas */
+  .footContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding: 30px;
+  }
+  
+  .col1 {
+    width: 50%;
+    text-align: left;
+    margin-bottom: 0;
+  }
+  
+  .col1 img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+    margin-bottom: 20px;
+  }
+  
+  .col2,.col3,.col4,.col5 {
+    width: calc((100% - 40px) / 3);
+    text-align: left;
+    margin-bottom: 0;
+  }
+  
+  .col5 .app {
+    margin-top: 20px;
+  }
+  
+  .col5 .qrCode {
+    text-align: center;
+    margin-top: 20px;
+  }
+  
+  .line {
+    margin: 30px 0;
+  }
+  
+  .copyright {
+    text-align: center;
+  }
+}
+
+
+
+@media only screen and (min-width: 768px) {
+  /* estilos para pantallas grandes */
+}
+
+@media only screen and (min-width: 1200px) {
+  /* estilos para pantallas extra grandes */
 }
 
