--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
-body {
+body{
   background-image: linear-gradient(to right, #434343 0%, black 100%);
-}
+  scroll-snap-type: y mandatory;
+} 
 
 /*Esto está comentado porque era el fondo anterior, ahora está con background de prueba oscuro*/
 /* body {
@@ -21,42 +22,50 @@ body {
     ); 
   } */
 
-  /*Efecto typing en el comienzo de la página*/
-  h5 {
-    width: 0;
-    overflow: hidden;
-    white-space: nowrap;
-    font-size: 2rem;
-    margin: 0 auto;
-    
-    border-right: 0.15em solid #18bdec;
-    animation: typing 4s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
-  }
-  @keyframes typing {
-    from {
-      width: 0;
-    }
-    to {
-      width: 30%;
-    }
-  }
-  @keyframes blink {
-    0% {
-      border-color: transparent;
-    }
-  }
-/**************************************************************************/
+  
+  
 
-/*barra de navegacion*/
-nav {
-  display: flex;
-  position: sticky;
-  top: 0;
+/* cabecera con barra de navegacion*/
+header{
+  position:sticky;
+  top:0;
   left:0;
   z-index: 100;
-  margin-top: 1rem;
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
+  scroll-snap-align: start;
+     }
+
+  /*Efecto typing en el comienzo de la página*/
+     .welcome {
+      width: 0;
+      overflow: hidden;
+      white-space: nowrap;
+      font-size: 2rem;
+      margin: 0 auto;
+      
+      border-right: 0.15em solid #18bdec;
+      animation: typing 4s steps(38) 1s 1 normal both, blink 1s steps(1) infinite;
+    }
+    @keyframes typing {
+      from {
+        width: 0;
+      }
+      to {
+        width: 30%;
+      }
+    }
+    @keyframes blink {
+      0% {
+        border-color: transparent;
+      }
+    }
+
+  /*barra de navegacion*/
+  nav {
+  display: flex;
+  
   width: 100%;
-  height: 7.813rem;
+  height: 6.5rem; /*anterior era 7.813rem*/
   justify-content: space-around;
   align-items: center;
   padding: 0 20px;
@@ -159,7 +168,6 @@ ul li a:hover {
     margin-left: -300%;
   }
 }
-/*************************************************************************************/
 
 /*banner final del carrusel. Ideal ajustar las imagenes a 1708px x 562px
  o el equivalente en rem*/
@@ -168,7 +176,7 @@ ul li a:hover {
   height: 35.125rem;
   background-color: #0082c8;
 }
-
+/*************************************************************************************/
 
 /*contenido de la página en donde estan las ilustraciones*/
 .grid-container {
@@ -186,6 +194,7 @@ ul li a:hover {
   justify-content: center;
   margin-top: 0.5rem;
 }
+
 /* Este es el cartelito que dice "conocé nuestras opciones"*/
 .above {
   grid-area: above;
@@ -200,9 +209,6 @@ ul li a:hover {
     font-size: 2.5rem;
   }
 
-
-  
-  
 .left {/*estilos de la ilustracion de la izquierda*/
   grid-area: left;
   background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(234,249,249,0.67) 0.1%, rgba(239,249,251,0.63) 90.1% );
@@ -253,6 +259,7 @@ ul li a:hover {
   transform: scale(1.1);
   transition: 1s;
 }
+/***************************************************************************************************/
 
 /* Este el es grid debajo de las ilustraciones , en donde está el aviso */
 /*en donde está el aviso del 5G*/
@@ -283,8 +290,7 @@ ul li a:hover {
 .wifi-icon{
   rotate: 90deg;
 }
-
-
+/***********************************************************************************************/
 
 /*cartelito de descarga de la app*/
 .grid-app{
@@ -307,7 +313,9 @@ opacity:.8;
 .grid-app img{
   border-radius: 30px;
   }
+/**********************************************************************************************/
 
+/*aviso que dice "pedí tu chip"*/
   .grid-sim{
     display: grid;
     margin:20px auto 20px auto;
@@ -326,17 +334,9 @@ opacity:.8;
   .grid-sim img{
     border-radius: 30px;
     }
+    /****************************************************************************************/
 
-    
-    
-      
-      
-    
-
-
-
-
-  /*contenedor del footer*/
+     /*contenedor del footer*/
 .footContainer {
   background: #141e30;
   background: -webkit-linear-gradient(to right, #243b55, #141e30);
@@ -408,8 +408,9 @@ footer {
 .app {
   margin-top: 4rem;
 }
+/****************************************************************************************/
 
-/*Ajuste de los media queries*/
+/*Ajuste de los media queries sin terminar/*
 /*Estilos para pantallas pequeñas*/ 
 
 @media only screen and (max-width: 600px) {
