--- a/assets/css/styles_form2.css
+++ b/assets/css/styles_form2.css
@@ -16,6 +16,37 @@ body{
     
     }
 
+    /*Lista de elementos dentro de la barra de navegacion*/
+ul{
+    margin: 0px;
+    padding: 70px;
+    display:flex;
+    justify-content: end;
+    }
+
+ul li {
+    list-style: none;
+    margin: 0 25px;
+}
+
+ul li a {
+    color: aqua;
+    text-decoration: none;
+}
+
+ul li a:hover{
+    color: white;
+ }
+
+.logo{
+    margin-top: 1rem;
+    margin-left:-22rem;
+    width: 20rem;
+    }
+
+
+
+
 /* Contenedor grid */
 /* configuración para dispositivos de mayor tamaño     */
 
@@ -23,7 +54,7 @@ body{
     display: grid;
 
 /* Se definen tres filas / tres columnas */
-    grid-template: 11.25rem 1fr  3.75rem / 10% auto 10%;
+    grid-template: 10.25rem 1fr  3.75rem / 5% auto 5%;
 
 /* Distribucion el contenido en cada fila */
     grid-template-areas: "above above above"
@@ -38,15 +69,21 @@ body{
 .above { grid-area: above;   background: #0f0c29;
 background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
 background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
-height: 9rem;
+height: 6.5rem;
 margin-top: 1rem;              
 position:sticky;
 top:0;
 display: flex;
-justify-content:end;
+align-items: center;
+justify-content:space-around;
 width: 100%;
 font-size: 1.3rem;
-box-shadow: 0.625rem 0.313rem 0.313rem black; 
+box-shadow: 0.625rem 0.313rem 0.313rem #000000; 
+}
+
+/* color de la fuente del área del medio*/
+.middle{
+    color:#7fffd4;
 }
 /*barra lateral izquierda*/
   .left{ grid-area:left;  /*background: #2193b0; 
@@ -73,47 +110,59 @@ box-shadow: 0.625rem 0.313rem 0.313rem black;
 
 }
 
-/*Lista de elementos dentro de la barra de navegacion*/
-ul{
-    margin: 0px;
-    padding: 70px;
-    display:flex;
+
+.grid-prom {
+    display: grid;
+    
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr 1fr 20%;
+    gap: 10px;
+   
+   
+  }
+  
+  .grid-item {
+   background: #bc4e9c;  /* fallback for old browsers */
+   background: -webkit-linear-gradient(to right, #f80759, #bc4e9c);  /* Chrome 10-25, Safari 5.1-6 */
+   background: linear-gradient(to right, #f80759, #bc4e9c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    padding: 10px;
+    text-align: start;
+    border-radius: 10px;
+    
+    
     }
-
-ul li {
-    list-style: none;
-    margin: 0 25px;
+    .grid-item h1{
+        font-size: 3rem;
+        color:#ffd166;
 }
-
-ul li a {
-    color: aqua;
-    text-decoration: none;
-}
-
-ul li a:hover{
-    color: white;
- }
-
-.logo{
-    margin-top:-1.5rem;
-    margin-left:-40rem;
+    .grid-item h5 {
+        text-align: center;
+        color:#000000a7;
     }
-
-
-.middle{
-    color:#D3D0CB;
-}
-
+    
+    .prom2{
+  background-image: linear-gradient( 76.3deg,  #2c3e4e 12.6%, #456783 82.8% );
+  text-align: center;
+  color:#fffffffc;
+  text-shadow:#000000 0.1em 0.1em 0.1em;
+  box-shadow: 0.625rem 0.313rem 0.313rem #000000;
+  opacity: .6;
+    }
+    
+        
 /* Estilo del formulario*/
 form{
+    margin-top: 3rem;
     padding: 10px;
     color:white;
     border:2px solid #D3D0CB;
     background: #4B79A1;  
     background: -webkit-linear-gradient(to right, #283E51, #4B79A1);  
     background: linear-gradient(to right, #283E51, #4B79A1); 
-    margin-top: 3rem;
+    
     }
+
+    
     
         
     
