--- a/assets/css/styles_form2.css
+++ b/assets/css/styles_form2.css
@@ -81,6 +81,62 @@ font-size: 1.3rem;
 box-shadow: 0.625rem 0.313rem 0.313rem #000000; 
 }
 
+nav input[type="checkbox"] {
+    display: none;
+  }
+  
+  nav label {
+    display: none;
+    cursor: pointer;
+  }
+  
+  @media only screen and (max-width: 768px) {
+    nav ul {
+      display: none;
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+    background: #0f0c29;
+    background: -webkit-linear-gradient(to right, #24243e, #302b63, #0f0c29);
+    background: linear-gradient(to right, #24243e, #302b63, #0f0c29);
+    padding: 1rem;
+    box-shadow: 0 2px 5px #00000033;
+    }
+  
+    nav li {
+      margin: 0;
+      text-align: center;
+    }
+  
+    nav a {
+      display: block;
+      font-size: 1.2rem;
+      padding: 0.5rem 0;
+    }
+    
+  
+    input[type="checkbox"]:checked ~ ul {
+      display: flex;
+      flex-direction: column;
+    }
+  
+    nav label {
+      display: block;
+      font-size: 2rem;
+      cursor: pointer;
+      position: absolute;
+      top: 1rem;
+      right: 1rem;
+      z-index: 1;
+    }
+  
+    .fa-bars {
+      display: block;
+    
+    }
+}
+
 /* color de la fuente del área del medio*/
 .middle{
     color:#7fffd4;
@@ -102,11 +158,11 @@ box-shadow: 0.625rem 0.313rem 0.313rem #000000;
 background: #141E30;  
 background: -webkit-linear-gradient(to right, #243B55, #141E30);
 background: linear-gradient(to right, #243B55, #141E30); 
-color:white;
+color:#ffffff;
 display: flex;
 justify-content: center;
 margin-bottom: 1rem;
-box-shadow: 0.625rem 0.313rem 0.313rem black; 
+box-shadow: 0.625rem 0.313rem 0.313rem #000000; 
 
 }
 
@@ -140,16 +196,6 @@ box-shadow: 0.625rem 0.313rem 0.313rem black;
         color:#000000a7;
     }
     
-    .prom2{
-  background-image: linear-gradient( 76.3deg,  #2c3e4e 12.6%, #456783 82.8% );
-  text-align: center;
-  color:#fffffffc;
-  text-shadow:#000000 0.1em 0.1em 0.1em;
-  box-shadow: 0.625rem 0.313rem 0.313rem #000000;
-  opacity: .6;
-    }
-    
-        
 /* Estilo del formulario*/
 form{
     margin-top: 3rem;
@@ -163,13 +209,10 @@ form{
     }
 
     
+    /***********************************************************************************************/
+      
     
-        
-    
-    
-
-
-    
-
-
+          
+          
+          
 
